Make general layout of the dashboard in grid

--- a/index.html
+++ b/index.html
@@ -25,21 +25,39 @@
     </header>
 
     <!--Sidebar section-->
-    <nav class="sidebard">
+    <nav class="sidebar">
       <h1>Dashboard</h1>
       <ul class="dashboard-pages">
-        <li><a href="">Home</a></li>
-        <li><a href="">Profile</a></li>
-        <li><a href="">Messages</a></li>
-        <li><a href="">History</a></li>
-        <li><a href="">Tasks</a></li>
-        <li><a href="">Communities</a></li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Home</a>
+        </li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Profile</a>
+        </li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Messages</a>
+        </li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />History</a>
+        </li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Tasks</a>
+        </li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Communities</a>
+        </li>
       </ul>
 
       <ul class="dashboard-utilities">
-        <li><a href="">Settings</a></li>
-        <li><a href="">Support</a></li>
-        <li><a href="">Privacy</a></li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Settings</a>
+        </li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Support</a>
+        </li>
+        <li>
+          <a href=""><img class="nav-icon" src="" alt="" />Privacy</a>
+        </li>
       </ul>
     </nav>
 
