Make styling for navigation part

--- a/index.html
+++ b/index.html
@@ -26,37 +26,52 @@
 
     <!--Sidebar section-->
     <nav class="sidebar">
-      <h1>Dashboard</h1>
+      <h1 class="dashboard-title">
+        <a href="index.html"
+          ><img class="dashboard-icon" src="" alt="" /><span class="title-text"
+            >Dashboard</span
+          ></a
+        >
+      </h1>
       <ul class="dashboard-pages">
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Home</a>
+          <img class="nav-icon" src="/images/home.svg" alt="" />
+          <a href="">Home</a>
         </li>
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Profile</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">Profile</a>
         </li>
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Messages</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">Messages</a>
         </li>
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />History</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">History</a>
         </li>
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Tasks</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">Tasks</a>
         </li>
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Communities</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">Communities</a>
         </li>
       </ul>
 
       <ul class="dashboard-utilities">
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Settings</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">Settings</a>
         </li>
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Support</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">Support</a>
         </li>
         <li>
-          <a href=""><img class="nav-icon" src="" alt="" />Privacy</a>
+          <img class="nav-icon" src="" alt="" />
+          <a href="">Privacy</a>
         </li>
       </ul>
     </nav>
