Finish Header section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--Header section-->
@@ -17,16 +23,22 @@
       <div class="alert-container">
         <button class="button-icon alert-button"></button>
         <img
-          src=""
+          src="./images/Violet Dark Blue Beige Anime Music Twitch Logo.png"
           alt="profile image of a user"
           class="profile-picture-small"
         />
-        <p class="user-name-small"></p>
+        <p class="user-name-small">Morgan oakley</p>
       </div>
       <div class="salutation-container">
-        <img src="" alt="profile-picture-big" />
-        <p class="salutation">Hi there,</p>
-        <p class="user-name-big">Morgan oakley (@morgan)</p>
+        <img
+          src="./images/Violet Dark Blue Beige Anime Music Twitch Logo.png"
+          alt="profile picture of a user"
+          class="profile-picture-big"
+        />
+        <div class="text-container">
+          <p class="salutation">Hi there,</p>
+          <p class="user-name-big">Morgan oakley (@morgan)</p>
+        </div>
       </div>
 
       <div class="actions-container">
