Finish your projects part

--- a/index.html
+++ b/index.html
@@ -116,144 +116,229 @@
       <section class="your-projects">
         <h2>Your projects</h2>
 
-        <div class="project-card-container">
-          <article class="project-card">
-            <h3 class="project-title">Super cool Project</h3>
-            <p class="project-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-          </article>
-          <article class="project-card">
-            <h3 class="project-title">Super cool Project</h3>
-            <p class="project-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-          </article>
-          <article class="project-card">
-            <h3 class="project-title">Super cool Project</h3>
-            <p class="project-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-          </article>
-          <article class="project-card">
-            <h3 class="project-title">Super cool Project</h3>
-            <p class="project-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-          </article>
-          <article class="project-card">
-            <h3 class="project-title">Super cool Project</h3>
-            <p class="project-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-          </article>
-          <article class="project-card">
-            <h3 class="project-title">Super cool Project</h3>
-            <p class="project-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-            <button class="button-icon"></button>
-          </article>
-        </div>
+        
+          <div class="project-card-container">
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="/images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+          </div>
+       
       </section>
       <!--Announcements section-->
-      <section class="announcements">
-        <h2>Announcements</h2>
-        <div class="announcement-card-container">
-          <article class="announcement-card">
-            <h3 class="announcement-title">Site maintenance</h3>
-            <p class="announcement-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt
-            </p>
-          </article>
-          <article class="announcement-card">
-            <h3 class="announcement-title">Site maintenance</h3>
-            <p class="announcement-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt
-            </p>
-          </article>
-          <article class="announcement-card">
-            <h3 class="announcement-title">Site maintenance</h3>
-            <p class="announcement-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt
-            </p>
-          </article>
-        </div>
-      </section>
-
-      <!--Trending section-->
-      <section class="trending">
-        <h2>Trending</h2>
-        <div class="tend-container">
-          <div class="trend-card">
-            <img
-              src=""
-              alt="profile image of a user"
-              class="profile-picture-small"
-            />
-            <p class="author-name">tegan</p>
-            <p class="trend-title">World Peace Builder</p>
+      <div class="announcement-trending">
+        <section class="announcements">
+          <h2>Announcements</h2>
+          <div class="announcement-card-container">
+            <article class="announcement-card">
+              <h3 class="announcement-title">Site maintenance</h3>
+              <p class="announcement-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt
+              </p>
+            </article>
+            <article class="announcement-card">
+              <h3 class="announcement-title">Site maintenance</h3>
+              <p class="announcement-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt
+              </p>
+            </article>
+            <article class="announcement-card">
+              <h3 class="announcement-title">Site maintenance</h3>
+              <p class="announcement-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt
+              </p>
+            </article>
           </div>
-
-          <div class="trend-card">
-            <img
-              src=""
-              alt="profile image of a user"
-              class="profile-picture-small"
-            />
-            <p class="author-name">tegan</p>
-            <p class="trend-title">World Peace Builder</p>
+        </section>
+        <!--Trending section-->
+        <section class="trending">
+          <h2>Trending</h2>
+          <div class="tend-container">
+            <div class="trend-card">
+              <img
+                src=""
+                alt="profile image of a user"
+                class="profile-picture-small"
+              />
+              <p class="author-name">tegan</p>
+              <p class="trend-title">World Peace Builder</p>
+            </div>
+            <div class="trend-card">
+              <img
+                src=""
+                alt="profile image of a user"
+                class="profile-picture-small"
+              />
+              <p class="author-name">tegan</p>
+              <p class="trend-title">World Peace Builder</p>
+            </div>
+            <div class="trend-card">
+              <img
+                src=""
+                alt="profile image of a user"
+                class="profile-picture-small"
+              />
+              <p class="author-name">tegan</p>
+              <p class="trend-title">World Peace Builder</p>
+            </div>
           </div>
-
-          <div class="trend-card">
-            <img
-              src=""
-              alt="profile image of a user"
-              class="profile-picture-small"
-            />
-            <p class="author-name">tegan</p>
-            <p class="trend-title">World Peace Builder</p>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
   </body>
 </html>
