Finish basic version of an admin dashboard

--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
         <!--Trending section-->
         <section class="trending">
           <h2>Trending</h2>
-          <div class="tend-container">
+          
             <div class="trend-card">
               <img
-                src=""
+                src="./images/Violet Dark Blue Beige Anime Music Twitch Logo.png"
                 alt="profile image of a user"
                 class="profile-picture-small"
               />
@@ -320,7 +320,7 @@
             </div>
             <div class="trend-card">
               <img
-                src=""
+                src="./images/Violet Dark Blue Beige Anime Music Twitch Logo.png"
                 alt="profile image of a user"
                 class="profile-picture-small"
               />
@@ -329,14 +329,14 @@
             </div>
             <div class="trend-card">
               <img
-                src=""
+                src="./images/Violet Dark Blue Beige Anime Music Twitch Logo.png"
                 alt="profile image of a user"
                 class="profile-picture-small"
               />
               <p class="author-name">tegan</p>
               <p class="trend-title">World Peace Builder</p>
             </div>
-          </div>
+          
         </section>
       </div>
     </main>
