--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
       </h1>
       <ul class="dashboard-pages">
         <li>
-          <img class="nav-icon" src="/images/home.svg" alt="Home icon" />
+          <img class="nav-icon" src="./images/home.svg" alt="Home icon" />
           <a href="">Home</a>
         </li>
         <li>
           <img
             class="nav-icon"
-            src="/images/card-account-details-outline.svg"
+            src="./images/card-account-details-outline.svg"
             alt="profile icon"
           />
           <a href="">Profile</a>
@@ -75,36 +75,36 @@
         <li>
           <img
             class="nav-icon"
-            src="/images/message-reply-outline.svg"
+            src="./images/message-reply-outline.svg"
             alt=""
           />
           <a href="">Messages</a>
         </li>
         <li>
-          <img class="nav-icon" src="/images/history.svg" alt="" />
+          <img class="nav-icon" src="./images/history.svg" alt="" />
           <a href="">History</a>
         </li>
         <li>
-          <img class="nav-icon" src="/images/file-multiple.svg" alt="" />
+          <img class="nav-icon" src="./images/file-multiple.svg" alt="" />
           <a href="">Tasks</a>
         </li>
         <li>
-          <img class="nav-icon" src="/images/account-group.svg" alt="" />
+          <img class="nav-icon" src="./images/account-group.svg" alt="" />
           <a href="">Communities</a>
         </li>
       </ul>
 
       <ul class="dashboard-utilities">
         <li>
-          <img class="nav-icon" src="/images/cog.svg" alt="" />
+          <img class="nav-icon" src="./images/cog.svg" alt="" />
           <a href="">Settings</a>
         </li>
         <li>
-          <img class="nav-icon" src="/images/help-box.svg" alt="" />
+          <img class="nav-icon" src="./images/help-box.svg" alt="" />
           <a href="">Support</a>
         </li>
         <li>
-          <img class="nav-icon" src="/images/shield-check-outline.svg" alt="" />
+          <img class="nav-icon" src="./images/shield-check-outline.svg" alt="" />
           <a href="">Privacy</a>
         </li>
       </ul>
@@ -129,17 +129,69 @@
               <div class="buttons-container">
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/star-plus-outline.svg"
+                  src="./images/star-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/eye-plus-outline.svg"
+                  src="./images/eye-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/source-fork.svg"
+                  src="./images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="./images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="./images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="./images/source-fork.svg"
+                  alt="profile icon"
+                /></button>
+              </div>
+            </article>
+            <article class="project-card">
+              <h3 class="project-title">Super cool Project</h3>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="buttons-container">
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="./images/star-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="./images/eye-plus-outline.svg"
+                  alt="profile icon"
+                /></button>
+                <button class="button-icon"><img
+                  class="nav-icon"
+                  src="./images/source-fork.svg"
                   alt="profile icon"
                 /></button>
               </div>
@@ -207,69 +259,17 @@
               <div class="buttons-container">
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/star-plus-outline.svg"
+                  src="./images/star-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/eye-plus-outline.svg"
+                  src="./images/eye-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/source-fork.svg"
-                  alt="profile icon"
-                /></button>
-              </div>
-            </article>
-            <article class="project-card">
-              <h3 class="project-title">Super cool Project</h3>
-              <p class="project-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-              <div class="buttons-container">
-                <button class="button-icon"><img
-                  class="nav-icon"
-                  src="/images/star-plus-outline.svg"
-                  alt="profile icon"
-                /></button>
-                <button class="button-icon"><img
-                  class="nav-icon"
-                  src="/images/eye-plus-outline.svg"
-                  alt="profile icon"
-                /></button>
-                <button class="button-icon"><img
-                  class="nav-icon"
-                  src="/images/source-fork.svg"
-                  alt="profile icon"
-                /></button>
-              </div>
-            </article>
-            <article class="project-card">
-              <h3 class="project-title">Super cool Project</h3>
-              <p class="project-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-              <div class="buttons-container">
-                <button class="button-icon"><img
-                  class="nav-icon"
-                  src="/images/star-plus-outline.svg"
-                  alt="profile icon"
-                /></button>
-                <button class="button-icon"><img
-                  class="nav-icon"
-                  src="/images/eye-plus-outline.svg"
-                  alt="profile icon"
-                /></button>
-                <button class="button-icon"><img
-                  class="nav-icon"
-                  src="/images/source-fork.svg"
+                  src="./images/source-fork.svg"
                   alt="profile icon"
                 /></button>
               </div>
@@ -315,8 +315,10 @@
                 alt="profile image of a user"
                 class="profile-picture-small"
               />
-              <p class="author-name">tegan</p>
-              <p class="trend-title">World Peace Builder</p>
+              <div>
+                <p class="author-name">@tegan</p>
+                <p class="trend-title">World Peace Builder</p>
+              </div>
             </div>
             <div class="trend-card">
               <img
@@ -324,8 +326,10 @@
                 alt="profile image of a user"
                 class="profile-picture-small"
               />
-              <p class="author-name">tegan</p>
-              <p class="trend-title">World Peace Builder</p>
+              <div>
+                <p class="author-name">@tegan</p>
+                <p class="trend-title">World Peace Builder</p>
+              </div>
             </div>
             <div class="trend-card">
               <img
@@ -333,8 +337,10 @@
                 alt="profile image of a user"
                 class="profile-picture-small"
               />
-              <p class="author-name">tegan</p>
-              <p class="trend-title">World Peace Builder</p>
+              <div>
+                <p class="author-name">@tegan</p>
+                <p class="trend-title">World Peace Builder</p>
+              </div>
             </div>
           
         </section>
