Fix more svg path names

--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@
               <div class="buttons-container">
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/star-plus-outline.svg"
+                  src="./images/star-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/eye-plus-outline.svg"
+                  src="./images/eye-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/source-fork.svg"
+                  src="./images/source-fork.svg"
                   alt="profile icon"
                 /></button>
               </div>
@@ -233,17 +233,17 @@
               <div class="buttons-container">
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/star-plus-outline.svg"
+                  src="./images/star-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/eye-plus-outline.svg"
+                  src="./images/eye-plus-outline.svg"
                   alt="profile icon"
                 /></button>
                 <button class="button-icon"><img
                   class="nav-icon"
-                  src="/images/source-fork.svg"
+                  src="./images/source-fork.svg"
                   alt="profile icon"
                 /></button>
               </div>
